@@ -4,6 +4,9 @@
 #include <dolfin/dolfin_settings.h>
 #include <dolfin/ODE.h>
 #include <dolfin/Element.h>
+#include <dolfin/TimeSlab.h>
+#include <dolfin/Solution.h>
+#include <dolfin/RHS.h>
 #include <dolfin/Adaptivity.h>
 
 using namespace dolfin;
@@ -98,17 +101,43 @@ unsigned int Adaptivity::size() const
   return regulators.size();
 }
 //-----------------------------------------------------------------------------
-void Adaptivity::shift()
+void Adaptivity::shift(Solution& u, RHS& f)
 {
+  // Update residuals and time steps
+  for (unsigned int i = 0; i < u.size(); i++)
+  {
+    // Get last element
+    Element* element = u.last(i);
+    dolfin_assert(element);
+
+    // Compute residual
+    real r = element->computeResidual(f);
+
+    // Compute new time step
+    real k = element->computeTimeStep(TOL, r, kmax_current);
+
+    // Update regulator
+    regulators[i].update(k, kmax_current, kfixed);
+  }
+  
+  // Update stabilization
   if ( m > 0 )
   {
     // Decrease the remaining number of small steps
     m -= 1;
   }
   else
+
   {
     // Increase kmax_current with a factor 2 towards kmax
     kmax_current = 2.0 * kmax_current * kmax / (kmax_current + kmax);
   }
+}
+//-----------------------------------------------------------------------------
+bool Adaptivity::accept(TimeSlab& timeslab, RHS& f)
+{
+  // FIXME: Use one margin for determining the time steps and another
+  // FIXME: margin for accepting time slabs. Make these parameters.
+  return timeslab.accept(f, 2*TOL);
 }
 //-----------------------------------------------------------------------------
